# kabbalistix-rs

./: Cargo.toml  README.md
src/: cli.rs  expression.rs  iterator.rs  lib.rs  main.rs  solver.rs  utils.rs
src/expression/: ast.rs  display.rs  errors.rs  eval.rs  latex.rs  mod.rs  tests.rs
src/iterator/: constants.rs  core.rs  generator.rs  mod.rs  state.rs  tests.rs  types.rs
src/solver/: constants.rs  core.rs  errors.rs  generator.rs  mod.rs  tests.rs
src/utils/: digits.rs  errors.rs  mod.rs  partitions.rs  tests.rs  validation.rs
