[package]
name = "kabbalistix"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rayon = "1.8"

[lints.clippy]
# Safety and correctness lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
unwrap_or_default = "deny"
get_unwrap = "deny"
map_unwrap_or = "deny"
unnecessary_unwrap = "deny"
mem_forget = "deny"

only_used_in_recursion = "deny"
allow_attributes = "deny"


# Documentation lints
missing_errors_doc = "deny"
missing_panics_doc = "deny"

# Development lints
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# Concurrency lints
clone_on_ref_ptr = "deny"
mutex_atomic = "deny"
rc_mutex = "deny"

[lints.rust]
dead_code = "deny"
